# mgnify-methods

./: .gitignore  pyproject.toml
data/: shipment_b1b2_181.csv
data/mgnify_data/: ERP003634_taxonomy_abundances_SSU_v5.0.tsv  ERP106348_taxonomy_abundances_SSU_v5.0.tsv  ERP122219_taxonomy_abundances_SSU_v5.0.tsv  ERP124424_taxonomy_abundances_SSU_v5.0.tsv  ERP124431_taxonomy_abundances_SSU_v5.0.tsv  ERP144826_taxonomy_abundances_SSU_v5.0.tsv  ERP151329_taxonomy_abundances_SSU_v5.0.tsv  SRP237882_taxonomy_abundances_SSU_v5.0.tsv  SRP334933_taxonomy_abundances_SSU_v5.0.tsv
data/parquet_files/: metagoflow_analyses.LSU.parquet  metagoflow_analyses.SSU.parquet  metagoflow_analyses.go.parquet  metagoflow_analyses.go_slim.parquet  metagoflow_analyses.ko.parquet
notebooks/: 01_mgnify_rarefaction_test.ipynb  02_mgnify_rarefaction.ipynb  03_mgnify_rarefaction_fast.ipynb  README.md  test_mgnify_oop.ipynb
scripts/: mgnify_rarefaction.py
src/mgnify_methods/: __init__.py  mgnify_oop.py  stats.py  taxonomy.py
src/mgnify_methods/metacomp/: rarefaction.py
src/mgnify_methods/tables/: __init__.py  tables.py
src/mgnify_methods/tables/sources/: converters.py  detectors.py  handlers.py  validators.py
src/mgnify_methods/utils/: __init__.py  api.py  io.py  plot.py
tests/: test_basic.py  test_oop.py
