[project]
name = "mgnify-methods"
version = "0.1.0"
description = "Support methods and classes for the Biodiversity studies on Mgnify metagenomes"
readme = "README.md"
authors = [
    { name = "palec87", email = "palec87@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.81.0",
    "jsonapi-client>=0.9.9",
    "marine-omics>=0.1.17",
    "matplotlib>=3.8.0",
    "matplotlib_venn>=1.1.2",
    "py-udal-mgo @ git+https://github.com/fair-ease/py-udal-mgo.git",
    "numpy>=1.25.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "setuptools>=68.0.0,<81.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "jupyterlab>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
